adding default plugins and theme

--- a/wp-quick-install/data.ini
+++ b/wp-quick-install/data.ini
@@ -41,7 +41,7 @@ admin['email']      = info@mindsharestudios.com
 
 
 ;;;;
-; Enable SEO ? (uncomment to use) : 
+; Enable SEO ? (uncomment to use) :
 ; 1 = Yes, 0 = No
 ;;;;
 
@@ -68,7 +68,7 @@ delete_default_themes = 1
 ; List all plugin you want to install below  (uncomment to use):
 ;;;;
 
-plugins[] = wordpress-seo 
+plugins[] = wordpress-seo, tinymce-advanced, php-browser-detection, codepress-admin-columns, cms-page-order, advanced-custom-fields, broken-link-checker, stream, simply-show-ids
 
 
 
