--- a/wp-quick-install/data.ini
+++ b/wp-quick-install/data.ini
@@ -68,7 +68,7 @@ delete_default_themes = 1
 ; List all plugin you want to install below  (uncomment to use):
 ;;;;
 
-plugins[] = wordpress-seo, tinymce-advanced, php-browser-detection, codepress-admin-columns, cms-page-order, advanced-custom-fields, broken-link-checker, stream, simply-show-ids
+plugins[] = wordpress-seo;tinymce-advanced;php-browser-detection;codepress-admin-columns; advanced-custom-fields;broken-link-checker;stream;simply-show-ids
 
 
 
@@ -77,7 +77,7 @@ plugins[] = wordpress-seo, tinymce-advanced, php-browser-detection, codepress-ad
 ; 1 = Yes, 0 = No
 ;;;;
 
-plugins_premium = 0
+plugins_premium = 1
 
 
 ;;;;
