fix config for plugins

--- a/wp-quick-install/data.ini
+++ b/wp-quick-install/data.ini
@@ -36,7 +36,7 @@ db['default_content'] = 1
 ;;;;
 
 admin['user_login'] = mindshare
-admin['password']   = changeme
+admin['password']   =
 admin['email']      = info@mindsharestudios.com
 
 
@@ -68,9 +68,15 @@ delete_default_themes = 1
 ; List all plugin you want to install below  (uncomment to use):
 ;;;;
 
-plugins[] = wordpress-seo;tinymce-advanced;php-browser-detection;codepress-admin-columns; advanced-custom-fields;broken-link-checker;stream;simply-show-ids
-
-
+;plugins[] = wordpress-seo
+plugins[] = tinymce-advanced
+plugins[] = php-browser-detection
+plugins[] = codepress-admin-columns
+plugins[] = advanced-custom-fields
+plugins[] = broken-link-checker
+plugins[] = stream
+plugins[] = simply-show-ids
+plugins[] = developer
 
 ;;;;
 ; Install extensions which are on the "wp-quick-install" "plugins" folder (uncomment to use):
