changing root directory name

--- a/data.ini
+++ b/data.ini
@@ -79,7 +79,7 @@ plugins[] = simply-show-ids
 plugins[] = developer
 
 ;;;;
-; Install extensions which are on the "wp-quick-install" "plugins" folder (uncomment to use):
+; Install extensions which are in the "plugins" folder (uncomment to use):
 ; 1 = Yes, 0 = No
 ;;;;
 
