lots of fixes, added home url option, updated plugins and blankout

--- a/data.ini
+++ b/data.ini
@@ -77,6 +77,7 @@ plugins[] = broken-link-checker
 plugins[] = stream
 plugins[] = simply-show-ids
 plugins[] = developer
+plugins[] = plugin-central
 
 ;;;;
 ; Install extensions which are in the "plugins" folder (uncomment to use):
