--- a/data.ini
+++ b/data.ini
@@ -68,13 +68,15 @@ delete_default_themes = 1
 ; List all plugin you want to install below  (uncomment to use):
 ;;;;
 
-;plugins[] = wordpress-seo
+plugins[] = wordpress-seo
 plugins[] = tinymce-advanced
 plugins[] = php-browser-detection
 plugins[] = codepress-admin-columns
 plugins[] = advanced-custom-fields
 plugins[] = broken-link-checker
-plugins[] = stream
+plugins[] = simple-history
+plugins[] = wordpress-https
+plugins[] = cms-tree-page-view
 plugins[] = simply-show-ids
 plugins[] = developer
 plugins[] = plugin-central
